--- a/src/index.html
+++ b/src/index.html
@@ -32,13 +32,55 @@
       border-radius: 100%;
     }
     
+    @media (min-width:344px) {
+      .dresses{
+        height: 253px;
+      }
+    }
+    @media (min-width:360px) {
+      .dresses{
+        height: 263px;
+      }
+    }
+    
+
+    @media (min-width:375px) {
+      .dresses{
+        height: 270px;
+      }
+    }
+    @media (min-width:390px) {
+      .dresses{
+        height: 283px;
+      }
+    }
+    @media (min-width:412px) {
+      .dresses{
+        height: 294px;
+      }
+    }
+    @media (min-width:425px) {
+      .dresses{
+        height:306px;
+      }
+    }
+    @media (min-width:430px) {
+      .dresses{
+        height: 310px;
+      }
+    }
+    @media (min-width:540px) and (max-width:640px) {
+      .dresses{
+        height: 392px;
+      }
+    }
   </style>
 
   <!-- main-paddng- navbar px-[10px] md:pl-[30px] md:pr-[30px] lg:pl-[70px] lg:pr-[70px] -->
   <body class="">
     <div class="main-containe   ">
       <!-- start here -->
-      <div class="p-[0px] m-[0px] font-[Montserrat] max-w-[1440px   mx-auto">
+      <div class="p-[0px] m-[0px] font-[Montserrat] max-w-[1440px  mx-auto">
         <!-- header-section -->
         <header class="fixed right-[0px] left-[0px] W-[100%]">
           <div
@@ -267,7 +309,7 @@
 
 
          <!-- collection-section -->
-         <section class=" Collection-container mt-[100px] ">
+         <section class=" Collection-container mt-[100px] mb-[50px] ">
           <div
             class="collection pl-[12px] pr-[16px] lg:pl-[116px] lg:pr-[116px]"
           >
@@ -282,28 +324,28 @@
             </div>
             <!-- ------------------------------- -->
               <!-- cloths-collection-section -->
-              <div class="  image-of-cloths-collection grid grid-cols-2 mb-[30px]  mt-[20px] lg:gap-[16px]   ">
-              <div class="left-div flex flex-col  gap-[70px] lg:gap-[60px]   ">
-                <div class="upper-image min-w-[152px] h-[165px]  xl:max-w-[600px] xl:h-[500px] relative z-[-1] ">
-                  <img src="./Images/upper-left-image.png" class="w-[100%] h-[100%] object-cover " alt="">
-                  <button class=" bg-[#FFFFFF] absolute right-[20px] bottom-[20px] w-[167px] h-[40px] text-[14px] font-[400] ">Outwear</button>
+              <div class="  image-of-cloths-collection grid grid-cols-2 mb-[30px]  mt-[20px] gap-[15px] lg:gap-[31px]   ">
+              <div class="left-div flex flex-col  gap-[50px] lg:gap-[60px]   ">
+                <div class="upper-image min-w-[150px] h-[165px]  lg:max-w-[650px] lg:h-[375px] xl:h-[455px] 2xl:h-[500px] relative z-[-1] ">
+                  <img src="./Images/upper-left-image.png" class="w-[100%] h-[100%] object-cover" alt="">
+                  <button class=" bg-[#ffffff] absolute lg:right-[25px] lg:bottom-[20px] w-[80px] lg:w-[167px] h-[30px] lg:h-[40px] text-[14px] font-[400] ">Boluses</button>
                 </div>
-                <div class="lower-image min-w-[152px] h-[293px] xl:max-w-[600px] xl:h-[887px] relative z-[-1] ">
-                  <img src="./Images/lower-left-image.png" class=" w-[100%] h-[100%]  object-cover" alt="">
-                  <button class=" bg-[#FFFFFF] absolute right-[20px] bottom-[20px] w-[167px] h-[40px] text-[14px] font-[400] ">Outwear</button>
+                <div class="lower-image min-w-[150px]   xl:max-w-[650px] xl:h-[887px] relative z-[-1] ">
+                  <img src="./Images/lower-left-image.png" class=" dresses min-h-[235px] sm:h-[460px] md:h-[543px]  xl:h-[750px]  object-cover" alt="">
+                  <button class=" bg-[#FFFFFF] absolute lg:right-[25px] lg:bottom-[20px] w-[80px] lg:w-[167px] h-[30px] lg:h-[40px] text-[14px] font-[400] ">Dresses</button>
                 </div>
               </div>
               <!-- right -->
-              <div class="right-div  flex flex-col items-end gap-[40px] xl:gap-[185px]   ">
+              <div class="right-div  flex  flex-col items-end gap-[60px] lg:gap-[100px] xl:gap-[260px]   ">
                 <!-- right-upperimage -->
-                <div class="right-upper-image min-w-[152px] h-[316px] xl:max-w-[650px] xl:h-[827px] relative z-[-1] ">
-                  <img src="./Images/right-image-up.png " class=" w-[100%] h-[100%] object-cover " alt="">
-                  <button class=" bg-[#FFFFFF] absolute right-[20px] bottom-[20px] w-[167px] h-[40px] text-[14px] font-[400] ">Outwear</button>
+                <div class=" bg-black right-upper-image   lg:h-[316px] lg:max-w-[670px] lg:h-[607px] relative z-[-1] ">
+                  <img src="./Images/right-image-up.png " class=" pants-image  lg:w-[700px] lg:h-[607px] xl:h-[755px]  "    alt=""  >
+                  <button class=" bg-[#FFFFFF] absolute lg:left-[25px] lg:bottom-[18px] xl:bottom-[-8rem] lg:w-[167px] w-[80px] h-[30px] lg:h-[40px] text-[14px] font-[400] ">Pants</button>
                 </div>
                 <!-- right-lower-image -->
-                <div class=" right-lower-image w-[152px] h-[175px] xl:w-[600px] relative xl:h-[435px] z-[-1] ">
-                  <img src="./Images/right-lower-img.jfif" class=" w-[100%] h-[100%] object-cover relative " alt="">
-                  <button class=" bg-[#FFFFFF] absolute right-[20px] bottom-[20px] w-[167px] h-[40px] text-[14px] font-[400] ">Outwear</button>
+                <div class=" right-lower-image 2xl:h-[400px] bg-[red] z-[-1] relative ">
+                  <img src="./Images/right-lower-img.jfif" class=" w-[480px] h-[200px] lg:h-[270px] xl:w-[670px] xl:h-[400px] object-cover  "  alt="" />
+                  <button class=" absolute lg:right-[25px] lg:bottom-[19px] bg-[#ffffff] w-[80px] text-[14px] font-[400] h-[30px] lg:w-[167px] lg:h-[40px]  " >Outwear</button>
                 </div>
                 </div>
               </div>
