--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
       <!-- start here -->
       <div class="p-[0px] m-[0px] font-[Montserrat] max-w-[1440px  mx-auto">
         <!-- header-section -->
-        <header class="fixed right-[0px] left-[0px] W-[100%]">
+        <header class="fixed right-[0px] left-[0px] W-[100%] z-20">
           <div
             class="upper-line-all-order font-[600] flex justify-center items-center h-[25px] bg-[#5A6D57] text-[#FFFFFF] text-[12px] font-[Montserrat]"
           >
@@ -198,7 +198,7 @@
         <!--============================================================================================================ -->
 
         <!-- hero-section -->
-        <div class="hero-bg z-[-1] flex justify- items-end relative top-[90px]">
+        <div class="hero-bg  flex  items-end relative top-[90px] ">
           <div
             class="w-[195px] sm:w-[250px] lg:w-[300px] h-[130px] absolute text-[white] left-[12px] md:left-[45px] lg:left-[115px] sm:mb-[100px] md:mb-[200px] leading-[30px] sm:leading-[36px] lg:leading-[61.2px]"
           >
@@ -239,7 +239,7 @@
               <!-- image-cards -->
               <div class="  cards-of-cloths flex justify-between mt-[20px] lg:gap-[16px] flex-wrap ">
                 <!-- ===========================CARD-1 -->
-                <div class="card w-[160px] min-h-[333px] sm:w-[230px] md:w-[239px]  sm:h-[350px] lg:w-[375px] xl:w-[392px]  lg:h-[540px]">
+                <div class="card w-[160px] min-h-[333px] sm:w-[230px] md:w-[239px]  sm:h-[350px] lg:w-[375px] xl:w-[334px] 2xl:w-[392px]  lg:h-[540px]">
                   <div class="image-div max-w-[392px] relative h-[263px] md:h-[280px]  lg:h-[438px] z-[-1] ">
                     <button class="absolute right-[10px] top-[10px] sm:right-[20px] sm:top-[30px]">
                       <img src="./Images/favorite-like.png" alt="like" />
@@ -274,7 +274,7 @@
                   </div>
                 </div>
                 <!-- CARD-2 -->
-                <div class="card w-[160px] min-h-[333px] sm:w-[230px] md:w-[239px]  sm:h-[350px] lg:w-[375px] xl:w-[392px]  lg:h-[540px]">
+                <div class="card w-[160px] min-h-[333px] sm:w-[230px] md:w-[239px]  sm:h-[350px] lg:w-[375px] xl:w-[334px] 2xl:w-[392px]  lg:h-[540px]">
                   <div class="image-div max-w-[392px] relative h-[263px] md:h-[280px]  lg:h-[438px] z-[-1] ">
                     <button class="absolute right-[10px] top-[10px] sm:right-[20px] sm:top-[30px]">
                       <img src="./Images/favorite-like.png" alt="like" />
@@ -310,7 +310,7 @@
                 </div>
 
                 <!-- CARD-3 -->
-                <div class=" hidden sm:block card w-[160px] min-h-[333px] sm:w-[230px] md:w-[239px]  sm:h-[350px] lg:w-[375px] xl:w-[392px] lg:h-[540px]">
+                <div class=" hidden sm:block card w-[160px] min-h-[333px] sm:w-[230px] md:w-[239px]  sm:h-[350px] lg:w-[375px] xl:w-[334px] 2xl:w-[392px] lg:h-[540px]">
                   <div class="image-div max-w-[392px] relative h-[263px] md:h-[280px]  lg:h-[438px] z-[-1] ">
                     <button class="absolute right-[10px] top-[10px] sm:right-[20px] sm:top-[30px]">
                       <img src="./Images/favorite-like.png" alt="like" />
@@ -399,7 +399,133 @@
         </section>
         <!-- ==================================================================================> -->
 
-        <!--  -->
+        <!--Modiwwek-section  -->
+        <section class=" hidden modiweek-container mt-[100px] mb-[50px] overflow-hidden ">
+          <div class="modiweek pl-[12px]  lg:pl-[116px] ">
+            <div class="tittle-best-seller flex justify-between items-center">
+              <h3 class="text-[20px] lg:text-[32px] font-[700] lg:font-[600] text-[#0C0C0C]">
+                Modiweek
+              </h3>
+            </div>
+            <!-- ------------------------------- -->
+              <!-- modiwek-card-cloths-collection-section -->
+              <div class="  image-of-cloths-collection grid grid-cols-5 mb-[30px]  mt-[20px] gap-[15px] lg:gap-[20px] 2xl:gap-[70px]   ">
+              <!-- card-1-moddiweek -->
+              <div class="card border w-[160px] min-h-[333px] sm:w-[230px] md:w-[239px]  sm:h-[350px] lg:w-[375px]  xl:w-[288px] 2xl:h-[493px]">
+                <div class="image-div max-w-[392px] relative h-[263px] md:h-[280px]  lg:h-[438px] z-[-1] ">
+                  <button class="absolute right-[10px] top-[10px] sm:right-[20px] sm:top-[30px]">
+                    <img src="./Images/favorite-like.png" alt="like" />
+                  </button>
+                  <img
+                    src="./Images/Rectangle 12348.png"
+                    class="w-[100%] h-[100%] object-cover hidden sm:block "
+                    alt="tailored stretch-cloth"
+                  />
+                  <img src="./Images/mobile-telar-image.png" class="w-[100%] h-[100%] object-cover sm:hidden "
+                  alt="tailored stretch-cloth-mobile" >
+                </div>
+                <div class="title-name flex items-end  h-[55px]">
+                  <div class="name lg:gap-[6px]  lg:p-2">
+                    <h6 class=" text-[14px] lg:text-[16px]  font-[600] lg:font-[700]">Tailored Stretch</h6>
+                  </div>
+                </div>
+              </div>
+              <!-------------------------------------------------- -->
+              <!-- card-2-modiweek================== -->
+              <div class="card border w-[160px] min-h-[333px] sm:w-[230px] md:w-[239px]  sm:h-[350px] lg:w-[375px]  xl:w-[288px] 2xl:h-[493px]">
+                <div class="image-div max-w-[392px] relative h-[263px] md:h-[280px]  lg:h-[438px] z-[-1] ">
+                  <button class="absolute right-[10px] top-[10px] sm:right-[20px] sm:top-[30px]">
+                    <img src="./Images/favorite-like.png" alt="like" />
+                  </button>
+                  <img
+                    src="./Images/Rectangle 12348.png"
+                    class="w-[100%] h-[100%] object-cover hidden sm:block "
+                    alt="tailored stretch-cloth"
+                  />
+                  <img src="./Images/mobile-telar-image.png" class="w-[100%] h-[100%] object-cover sm:hidden "
+                  alt="tailored stretch-cloth-mobile" >
+                </div>
+                <div class="title-name flex items-end  h-[55px]">
+                  <div class="name flex   lg:gap-[6px] lg:p-2">
+                    <h6 class=" text-[14px] lg:text-[16px] font-[600] lg:font-[700]">Tailored Stretch</h6>
+                  </div>
+                </div>
+              </div>
+              <!-- --------------------------------------------------- -->
+              <!-- card-3--modiweeek -->
+              <div class="card border w-[160px] min-h-[333px] sm:w-[230px] md:w-[239px]  sm:h-[350px] lg:w-[375px]  xl:w-[288px] 2xl:h-[493px]">
+                <div class="image-div max-w-[392px] relative h-[263px] md:h-[280px]  lg:h-[438px] z-[-1] ">
+                  <button class="absolute right-[10px] top-[10px] sm:right-[20px] sm:top-[30px]">
+                    <img src="./Images/favorite-like.png" alt="like" />
+                  </button>
+                  <img
+                    src="./Images/Rectangle 12348.png"
+                    class="w-[100%] h-[100%] object-cover hidden sm:block "
+                    alt="tailored stretch-cloth"
+                  />
+                  <img src="./Images/mobile-telar-image.png" class="w-[100%] h-[100%] object-cover sm:hidden "
+                  alt="tailored stretch-cloth-mobile" >
+                </div>
+                <div class="title-name flex items-end  h-[55px]">
+                  <div class="name flex   lg:gap-[6px] lg:p-2">
+                    <h6 class=" text-[14px] lg:text-[16px] font-[600] lg:font-[700]">Tailored Stretch</h6>
+                  </div>
+                </div>
+              </div>
+              <!-- --------------------------------------------------- -->
+               <!-- card-4-modiweek=================================== -->
+               <div class="card border w-[160px] min-h-[333px] sm:w-[230px] md:w-[239px]  sm:h-[350px] lg:w-[375px]  xl:w-[288px] 2xl:h-[493px]">
+                <div class="image-div max-w-[392px] relative h-[263px] md:h-[280px]  lg:h-[438px] z-[-1] ">
+                  <button class="absolute right-[10px] top-[10px] sm:right-[20px] sm:top-[30px]">
+                    <img src="./Images/favorite-like.png" alt="like" />
+                  </button>
+                  <img
+                    src="./Images/Rectangle 12348.png"
+                    class="w-[100%] h-[100%] object-cover hidden sm:block "
+                    alt="tailored stretch-cloth"
+                  />
+                  <img src="./Images/mobile-telar-image.png" class="w-[100%] h-[100%] object-cover sm:hidden "
+                  alt="tailored stretch-cloth-mobile" >
+                </div>
+                <div class="title-name flex items-end  h-[55px]">
+                  <div class="name flex   lg:gap-[6px] lg:p-2">
+                    <h6 class=" text-[14px] lg:text-[16px] font-[600] lg:font-[700]">Tailored Stretch</h6>
+                  </div>
+                </div>
+              </div>
+              <!-- card-5-modeweek -->
+              <div class="card border w-[160px] min-h-[333px] sm:w-[230px] md:w-[239px]  sm:h-[350px] lg:w-[375px]  xl:w-[288px] 2xl:h-[493px]">
+                <div class="image-div max-w-[392px] relative h-[263px] md:h-[280px]  lg:h-[438px] z-[-1] ">
+                  <button class="absolute right-[10px] top-[10px] sm:right-[20px] sm:top-[30px]">
+                    <img src="./Images/favorite-like.png" alt="like" />
+                  </button>
+                  <img
+                    src="./Images/Rectangle 12348.png"
+                    class="w-[100%] h-[100%] object-cover hidden sm:block "
+                    alt="tailored stretch-cloth"
+                  />
+                  <img src="./Images/mobile-telar-image.png" class="w-[100%] h-[100%] object-cover sm:hidden "
+                  alt="tailored stretch-cloth-mobile" >
+                </div>
+                <div class="title-name flex items-end  h-[55px]">
+                  <div class="name flex   lg:gap-[6px] lg:p-2">
+                    <h6 class=" text-[14px] lg:text-[16px] font-[600] lg:font-[700]">Tailored Stretch</h6>
+                  </div>
+                </div>
+              </div>
+              <!-- END_OG_CARDS_ -->
+        <!-- ************************************************************************************* -->
+              </div>
+          </div>
+        </section>
+        <!-- ***************************************************************************END********************************************* -->
+
+        <!-- -------------------------Sustainability-section----------------------- -->
+         <section class="Sustainability-section  bg-black ">
+          <div class="Sustainability">
+           
+          </div>
+         </section>
       </div>
     </div>
   </body>
