add the footer pngs

--- a/src/index.html
+++ b/src/index.html
@@ -969,13 +969,15 @@
         
           <!-- Social Media and Copyright -->
           <div class="flex flex-col items-center lg:flex-row justify-between mt-8 -t -gray-700 pt-4">
-            <div class="flex space-x-4">
-              <a href="#"><img src="/images/instagram.svg" alt="Instagram" class="h-6"></a>
-              <a href="#"><img src="/images/facebook.svg" alt="Facebook" class="h-6"></a>
-              <a href="#"><img src="/images/pinterest.svg" alt="Pinterest" class="h-6"></a>
-              <a href="#"><img src="/images/tiktok.svg" alt="TikTok" class="h-6"></a>
+            <div class="flex flex-co space-x-4">
+              <a href="#"><img src="./Images/instagram.png" alt="Instagram" class="h-6"></a>
+              <a href="#"><img src="./Images/fb-icon.png" alt="Facebook" class="h-6"></a>
+              <a href="#"><img src="./Images/pensrat.png" alt="Pinterest" class="h-6"></a>
+              <a href="#"><img src="./Images/tktok.png" alt="TikTok" class="h-6"></a>
+
+              <p class="mt-4 lg:mt-0 text-sm">© 2023 Modimal. All Rights Reserved.</p>
             </div>
-            <p class="mt-4 lg:mt-0 text-sm">© 2023 Modimal. All Rights Reserved.</p>
+            <img src="./Images/Footer Chat box.png" alt="">
           </div>
         </footer>
       </div>
