--- a/src/index.html
+++ b/src/index.html
@@ -913,7 +913,8 @@
         <!-- follow-section-END****************************************************************************** -->
 
         <!-- footer -->
-        <footer class="  bg-[#404040] text-white md:py-8 lg:pl-[107px] pr-[16px] pl-[12px]  lg:min-h-[417px]  lg:pr-[110px] md:px-6">
+        <footer class="  bg-[#404040] grid items-center text-white  bg-black  lg:pl-[107px] pr-[16px] pl-[12px]  lg:min-h-[417px]  lg:pr-[110px] md:px-6 ">
+         <div class="mt-[20px]">
           <div class="  grid grid-cols-1 justify-items-between justify-items-cente  sm:grid-cols-1  md:grid-cols-1 lg:grid-cols-1  xl:grid-cols-2 ">
             <!-- Club Signup Section -->
             <div class=" lg:flex flex-col gap-[21px]  lg:w-[490px]">
@@ -979,6 +980,7 @@
             </div>
             <img src="./Images/Footer Chat box.png" alt="">
           </div>
+         </div>
         </footer>
       </div>
       <!-- end -->
