--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,11 @@
       .modiweek-title {
         height: 23px;
       }
+      .cloth-div{
+        display: flex;
+        justify-content: center!important;
+
+      }
     }
 
     @media (min-width: 344px) {
@@ -118,6 +123,13 @@
       ul li a{
       font-size: 16px;
     }
+
+    .cloth-div{
+        display: flex;
+        justify-content:space-between!important;
+
+      }
+
     }
 
     @media (min-width: 375px) {
@@ -130,6 +142,10 @@
       }
       .modiweek-title {
         height: 23px;
+      }
+
+      .b-card{
+        width: 166px!important;
       }
     }
     @media (min-width: 390px) {
@@ -144,6 +160,9 @@
       .modiweek-title {
         height: 23px;
       }
+      .b-card{
+        width: 173px!important;
+      }
     }
     @media (min-width: 412px) {
       .dresses {
@@ -157,6 +176,9 @@
       .modiweek-title {
         height: 23px;
       }
+      .b-card{
+        width: 184px!important;
+      }
     }
     @media (min-width: 425px) {
       .dresses {
@@ -169,10 +191,16 @@
       .modiweek-title {
         height: 23px;
       }
+      .b-card{
+        width: 191px!important;
+      }
     }
     @media (min-width: 430px) {
       .dresses {
         height: 310px;
+      }
+      .b-card{
+        width: 193px!important;
       }
     }
     @media (min-width: 540px) and (max-width: 640px) {
@@ -185,6 +213,9 @@
       }
       .modiweek-title {
         height: 23px;
+      }
+      .b-card{
+        width: 248px!important;
       }
     }
     @media (min-width: 640px) {
@@ -209,6 +240,9 @@
       .modiweek-title {
         height: 23px;
       }
+      .b-card{
+        width: 235px!important;
+      }
     }
     @media (min-width: 820px) {
       .dresses {
@@ -223,6 +257,9 @@
       .modiweek-title {
         height: 23px;
       }
+      .b-card{
+        width: 248px!important;
+      }
     }
     @media (min-width: 853px) and (max-width: 900px) {
       .boluses {
@@ -235,6 +272,9 @@
       }
       .left-div {
         gap: 170px !important;
+      }
+      .b-card{
+        width: 258px!important;
       }
     }
 
@@ -253,6 +293,9 @@
       }
       .modiweek-title {
         height: 23px;
+      }
+      .b-card{
+        width: 280px!important;
       }
     }
     @media (min-width: 1326px) {
@@ -370,14 +413,14 @@
             class="Best-seller pl-[12px] pr-[16px] lg:pl-[116px] lg:pr-[116px]"
           >
             <!-- title-button- -->
-            <div class="tittle-best-seller flex justify-between items-center">
+            <div class="tittle-best-seller  flex justify-between items-center">
               <h3
                 class="text-[20px] lg:text-[32px] font-[700] lg:font-[600] text-[#0C0C0C]"
               >
                 Best Sellers
               </h3>
               <button
-                class="hidden md:block text-[14px] text-end w-[105px] h-[40px] text-[#5A6D57]"
+                class="hidden sm:block text-[14px] text-end w-[105px] h-[40px] text-[#5A6D57]"
               >
                 view all
               </button>
@@ -385,11 +428,11 @@
             <!-- ------------------------------- -->
             <!-- image-cards -->
             <div
-              class="cards-of-cloths flex justify-between mt-[20px] lg:gap-[16px] flex-wrap"
+              class="cards-of-cloths cloth-div flex justify-between mt-[20px] lg:gap-[16px] flex-wrap"
             >
               <!-- ===========================CARD-1 -->
               <div
-                class="card w-[166px] min-h-[333px] sm:w-[230px] md:w-[239px] sm:h-[350px] lg:w-[375px] xl:w-[334px] 2xl:w-[392px] lg:h-[540px]"
+                class=" b-card w-[160px] min-h-[333px] sm:w-[230px] md:!min-w-[235px] sm:h-[350px] lg:!w-[245px] xl:!min-w-[334px] 2xl:!w-[392px] lg:h-[540px]"
               >
                 <div
                   class="image-div max-w-[392px] relative h-[263px] md:h-[280px] lg:h-[438px] z-[-1]"
@@ -447,7 +490,7 @@
               </div>
               <!-- CARD-2 -->
               <div
-                class="silk-card hidde card w-[166px] min-h-[333px] sm:w-[230px] md:w-[239px] sm:h-[350px] lg:w-[375px] xl:w-[334px] 2xl:w-[392px] lg:h-[540px]"
+                class=" b-card hidden silk-card hidde card w-[160px] min-h-[333px] sm:w-[230px] md:!min-w-[235px] sm:h-[350px] lg:!w-[245px] xl:!min-w-[334px] 2xl:!w-[392px] lg:h-[540px]"
               >
                 <div
                   class="image-div max-w-[392px] relative h-[263px] md:h-[280px] lg:h-[438px] z-[-1]"
@@ -506,7 +549,7 @@
 
               <!-- CARD-3 -->
               <div
-                class="hidden sm:block card w-[166px] min-h-[333px] sm:w-[230px] md:w-[239px] sm:h-[350px] lg:w-[375px] xl:w-[334px] 2xl:w-[392px] lg:h-[540px]"
+                class=" b-card hidden sm:block card w-[160px] min-h-[333px] sm:w-[230px] md:!min-w-[235px] sm:h-[350px] lg:!w-[245px] xl:!min-w-[334px] 2xl:!w-[392px] lg:h-[540px]"
               >
                 <div
                   class="image-div max-w-[392px] relative h-[263px] md:h-[280px] lg:h-[438px] z-[-1]"
